--- a/stylus/GitHubWide.css
+++ b/stylus/GitHubWide.css
@@ -1,137 +1,166 @@
-@namespace url(http://www.w3.org/1999/xhtml);
-
 @-moz-document domain("github.com") {
+.container-lg {
+    padding-left: 30px !important;
+    padding-right: 30px !important;
+    max-width: 90%;
+}
 
-	.container {
-	  width: 100% !important;
-	  padding-left: 30px !important;
-	  padding-right: 30px !important;
-	}
+/* Repo Next layout */
+.repository-content {
+    width: 100% !important;
+}
 
-	/* Repo Next layout */
+.repository-with-sidebar {
+    padding-right: 60px !important;
+}
 
-	.repository-content {
-	  width: 100% !important;
-	}
+.repository-with-sidebar .repository-sidebar {
+    margin-right: -60px !important;
+}
 
-	.repository-with-sidebar {
-	  padding-right: 60px !important;
-	}
+.summary-stats,
+.authors-and-code {
+    display: table;
+    width: 100%;
+}
 
-	.repository-with-sidebar .repository-sidebar {
-	  margin-right: -60px !important;
-	}
+.summary-stats li {
+    width: 25%;
+}
 
-	.summary-stats,
-	.authors-and-code {
-	  display: table;
-	  width: 100%;
-	}
+.authors-and-code .section {
+    width: 50%;
+}
 
-	.summary-stats li {
-	  width: 25%;
-	}
+/* Repo Next Code page */
+.with-full-navigation {
+    padding-right: 190px !important;
+}
 
-	.authors-and-code .section {
-	  width: 50%;
-	}
+.with-full-navigation .repository-sidebar {
+    margin-right: -190px !important;
+}
 
-	/* Repo Next Code page */
+/* Issues/PRs */
+.discussion-sidebar {
+    width: 220px !important;
+}
 
-	.with-full-navigation {
-	  padding-right: 190px !important;
-	}
+.discussion-timeline {
+    width: calc(100% - 240px) !important;
+}
 
-	.with-full-navigation .repository-sidebar {
-	  margin-right: -190px !important;
-	}
+/* Fix #18 - props: @auscompgeek */
+.file-header::after {
+    clear: left !important;
+}
 
-	/* Issues/PRs */
+/* New issues and Dashboard */
+#dashboard,
+.new-issue-form {
+    position: relative !important;
+}
 
-	.discussion-sidebar {
-	  width: 220px !important;
-	}
+.dashboard-sidebar,
+.new-issue-form .discussion-sidebar {
+    position: absolute !important;
+    top: 0 !important;
+    right: 0 !important;
+}
 
-	.discussion-timeline {
-	  width: calc(100% - 240px) !important;
-	}
+button.discussion-sidebar-toggle {
+    width: 100% !important;
+}
 
-	/* Fix #18 - props: @auscompgeek */
-	.file-header::after {
-	  clear: left !important;
-	}
+.timeline-new-comment {
+    max-width: none !important;
+}
 
-	/* New issues and Dashboard */
+/* Dashboard */
+/* Note that this won't be needed if we actually flipped the DOM order around. */
+.news {
+    float: none !important;
+    margin-right: 360px !important;
+}
 
-	#dashboard,
-	.new-issue-form {
-	  position: relative !important;
-	}
+/* Settings */
+/* This should be refactored to use our grid.scss styles anyway, thus negating these styles. */
+.settings-content,
+.repo-settings-content {
+    float: none !important;
+    width: auto !important;
+    overflow: auto !important;
+    /* required to clear the floats that the float avoided */
+}
+.container > .settings-content,
+.repo-settings-content {
+    margin-left: 260px !important;
+}
 
-	.dashboard-sidebar,
-	.new-issue-form .discussion-sidebar {
-	  position: absolute !important;
-	  top: 0 !important;
-	  right: 0 !important;
-	}
+#repo-settings .menu-container {
+    width: 240px !important;
+}
 
-	button.discussion-sidebar-toggle {
-	  width: 100% !important;
-	}
+#js-flash-container .flash-messages {
+    width: 100% !important;
+    padding-left: 30px !important;
+    padding-right: 30px !important;
+}
 
-	.timeline-new-comment {
-	  max-width: none !important;
-	}
+/* Profile page */
+/* Profile avatar tooltip */
+.vcard-avatar {
+    width: 230px !important;
+}
 
-	/* Dashboard */
-	/* Note that this won't be needed if we actually flipped the DOM order around. */
+/* Commits: extended message under "..." */
+.commit-desc pre {
+    max-width: none;
+}
 
-	.news {
-	  float: none !important;
-	  margin-right: 360px !important;
-	}
-
-	/* Settings */
-	/* This should be refactored to use our grid.scss styles anyway, thus negating these styles. */
-
-	.settings-content,
-	.repo-settings-content {
-	  float: none !important;
-	  width: auto !important;
-	  overflow: auto !important; /* required to clear the floats that the float avoided */
-	}
-	.container > .settings-content,
-	.repo-settings-content {
-	  margin-left: 260px !important;
-	}
-
-	#repo-settings .menu-container {
-	  width: 240px !important;
-	}
-
-	#js-flash-container .flash-messages {
-	  width: 100% !important;
-	  padding-left: 30px !important;
-	  padding-right: 30px !important;
-	}
-
-	/* Profile page */
-
-	/* Profile avatar tooltip */
-	.vcard-avatar {
-	  width: 230px !important;
-	}
-
-	/* Commits: extended message under "..." */
-	.commit-desc pre {
-	  max-width: none;
-	}
 
 /* RG Updates */
-  
-  .js-select-button.css-truncate-target
-  {
+
+.js-select-button.css-truncate-target {
     max-width: 250px !important;
-  }
-  
+}
+
+main .container-xl {
+    max-width: 1740px;
+}
+
+.state,
+.State,
+.IssueLabel,
+.btn,
+.form-control,
+.form-select,
+.label,
+.Label {
+    border-radius: 2px;
+}
+
+.subnav-item:first-child {
+    border-top-left-radius: 2px;
+    border-bottom-left-radius: 2px;
+}
+
+.subnav-item:last-child {
+    border-top-right-radius: 2px;
+    border-bottom-right-radius: 2px;
+}
+
+.Box-header {
+    border-top-left-radius: 2px;
+    border-top-right-radius: 2px;
+}
+
+.Box-row:last-of-type {
+    border-bottom-right-radius: 2px;
+    border-bottom-left-radius: 2px;
+}
+
+.octicon-file-directory.color-blue-3 {
+    color: #ffe78f !important;
+}
 }
