--- a/stylus/GoogleInSegoe.css
+++ b/stylus/GoogleInSegoe.css
@@ -1,84 +1,127 @@
 @-moz-document domain("google.com"), domain("google.co.uk"), domain("blogspot.com"), domain("youtube.com"), domain("mail.google.com") {
-body, td, textarea, select, legend, button, option, div.s, font,
-	.goog-menu, .goog-menu-vertical, .presently-menu, .goog-toolbar-menu-button, .modal-dialog-title-text, .menubar-item, .writely-menubar-item,  .goog-inline-block,
-	.modelinkOff, .manager-page body, .manager-page td, .manager-page div, a, .gb1, .feedmodule-titleText, .SUicbd, .AO, .AQ, .nJ, .pw, .AP,
-	.krEW7c, .MgLW8b,
-	.ax, .ar, .ha, .yS, .J-Zh-I, .J-N-Jz, .VP5otc-MdoD9, .VP5otc-tOAp0c, .Mh, .RS, .RG, .goog-offlinestatus-installed, .goog-offlinestatus-notinstalled, .goog-tree-item-label,
-	.event-title, .date-content, .eb-root, #dateunderlay, .yW, .aKx>.aKz, .ha>.hP
-	{
-		font-family:       "Segoe UI", Tahoma         !important;
-	}
+body,
+td,
+textarea,
+select,
+legend,
+button,
+option,
+div.s,
+font,
+.goog-menu,
+.goog-menu-vertical,
+.presently-menu,
+.goog-toolbar-menu-button,
+.modal-dialog-title-text,
+.menubar-item,
+.writely-menubar-item,
+.goog-inline-block,
+.modelinkOff,
+.manager-page body,
+.manager-page td,
+.manager-page div,
+a,
+.gb1,
+.feedmodule-titleText,
+.SUicbd,
+.AO,
+.AQ,
+.nJ,
+.pw,
+.AP,
+.krEW7c,
+.MgLW8b,
+.ax,
+.ar,
+.ha,
+.yS,
+.J-Zh-I,
+.J-N-Jz,
+.VP5otc-MdoD9,
+.VP5otc-tOAp0c,
+.Mh,
+.RS,
+.RG,
+.goog-offlinestatus-installed,
+.goog-offlinestatus-notinstalled,
+.goog-tree-item-label,
+.event-title,
+.date-content,
+.eb-root,
+#dateunderlay,
+.yW,
+.aKx > .aKz,
+.ha > .hP,
+.LC20lb,
+.mfMhoc,
+.fJiQld {
+    font-family: "Segoe UI", Tahoma !important;
+}
 
-	/* labels in email list and each email */
-	.krEW7c, .MgLW8b
-    {
-		font-size: 9pt;
-		margin-top: -1px !important;
-	}
+/* labels in email list and each email */
+.krEW7c,
+.MgLW8b {
+    font-size: 9pt;
+    margin-top: -1px !important;
+}
 
-	/* RG Extensions */
+/* RG Extensions */
+.xY {
+    font-size: 75% !important;
+}
 
-	.xY
-	{
-		font-size: 75% !important;
-	}
+#res h3,
+#botstuff h3 {
+    letter-spacing: inherit;
+}
 
-    .Tm::-webkit-scrollbar
-    {
-        width: 20px;
-    }
+.Tm::-webkit-scrollbar {
+    width: 20px;
+}
 
-    /* Selected Inbox side tab */
-    .wT>.n3 .byl:first-child .aim:first-child .nZ
-    {
-        background-color: #dbdbdb;
-    }
+/* Selected Inbox side tab */
+.wT > .n3 .byl:first-child .aim:first-child .nZ {
+    background-color: #dbdbdb;
+}
 
-    .yW
-    {
-        font-size: inherit;
-    }
+.yW {
+    font-size: inherit;
+}
 
-	.month-row .st-bg-table td:nth-child(1),
-	.month-row .st-bg-table td:nth-child(7)
-	{
-		background-color: #f5f5f5;
-	}
+.month-row .st-bg-table td:nth-child(1),
+.month-row .st-bg-table td:nth-child(7) {
+    background-color: #f5f5f5;
+}
 
-	.st-dtitle-today
-	{
-		color: #D14836 !important;
-		font-weight: bold;
-	}
+.st-dtitle-today {
+    color: #D14836 !important;
+    font-weight: bold;
+}
 
-	.yO, .zE
-	{
-		border-bottom: 1px solid #eee !important;
-        background: transparent;
-	}
+.yO,
+.zE {
+    border-bottom: 1px solid #eee !important;
+    background: transparent;
+}
 
-	.T-Jo
-	{
-		top: -1px !important;
-		left: 3px !important;
-	}
+.T-Jo {
+    top: -1px !important;
+    left: 3px !important;
+}
 
-	td.apU .T-KT
-	{
-		top: -1px !important;
-	}
+td.apU .T-KT {
+    top: -1px !important;
+}
 
-    /* Top Tabs */
-
-    .J-KU-KO.aAy:before
-    {
-        margin: 0;
-        border-top-left-radius: 0;
-        border-top-right-radius: 0;
-    }
+/* Top Tabs */
+.J-KU-KO.aAy:before {
+    margin: 0;
+    border-top-left-radius: 0;
+    border-top-right-radius: 0;
+}
 
 
-	/* Table row
+/* Table row
 	.zA .xY
 	{
 		border-bottom: none !important;
@@ -88,208 +131,141 @@ body, td, textarea, select, legend, button, option, div.s, font,
 		vertical-align: top !important;
 	}
     */
+/* Selected row */
+.zA.x7 .xY {
+    background-color: transparent !important;
+}
+.zA.x7 {
+    background-color: rgba(255, 231, 72, .16) !important;
+}
 
-	/* Selected row */
-	.zA.x7 .xY
-	{
-		background-color: transparent !important;
-	}
-	.zA.x7
-	{
-		background-color: rgba(255, 231, 72, .16) !important;
-	}
+/* Hover row */
+.zA.aqw .xY {
+    background-color: transparent !important;
+}
+.zA.aqw {
+    background-color: rgba(198, 198, 198, .27) !important;
+}
 
-	/* Hover row */
-	.zA.aqw .xY
-	{
-		background-color: transparent !important;
+td.oZ-x3::before {
+    background-position: 0px 4px;
+}
+
+.MsoNormal {
+    margin: 1em 0 !important;
+}
+
+.Bs .Bu:nth-child(2),
+.Bs .Bu:nth-child(3) {
+    display: none;
+}
+
+.AY {
+    background-color: #e8f1ff !important;
+    border-top: 0;
+}
+
+.A1 {
+    background-color: #e8f1ff !important;
+    border-bottom: 0;
+}
+
+.n0 {
+    font-weight: normal !important;
+    text-decoration: none !important;
+}
+
+.n1 .n0 {
+    text-decoration: underline !important;
+}
+
+.mn {
+    display: none;
+}
+
+.oZ-jd {
+    display: none;
+}
+
+input.oZ-jc {
+    margin-top: -4px !important;
+    margin-left: 13px !important;
+}
+
+.qRauBc {
+    border-top: 0 !important;
+}
+
+*:focus {
+    outline: none !important;
+}
+
+.yO,
+.zE {
+    border-bottom: 0 !important;
+}
+
+.zA .xY {
+    padding-top: 5px !important;
+    padding-bottom: 3px !important;
+}
+
+/* Space between tabs and emails */
+.aKh {
+    height: 51px
+}
+
+@media screen and (max-width: 800px) {
+    .aKh {
+        height: 37px
     }
-	.zA.aqw
-	{
-		background-color: rgba(198, 198, 198, .27) !important;
-    }
+}
 
-    td.oZ-x3::before
-    {
-        background-position: 0px 4px;
-    }
+.aIf-aLe .aDG,
+.aAy.J-KU-JW.aAy.aIf-aLe .aKo,
+.aAy.J-KU-KO.aAy.aIf-aLe .aKo {
+    background-color: #dd4b39;
+}
 
-	.MsoNormal
-	{
-		margin: 1em 0 !important;
-	}
+.T-I {
+    border-radius: 0;
+}
 
-	.Bs .Bu:nth-child(2),
-	.Bs .Bu:nth-child(3)
-	{
-		display: none;
-	}
+.aim {
+    margin-bottom: 5px;
+}
 
-	.AY
-	{
-		background-color: #e8f1ff !important;
-		border-top: 0;
-	}
+.UI {
+    min-height: 650px;
+}
 
-	.A1
-	{
-		background-color: #e8f1ff !important;
-		border-bottom: 0;
-	}
+.l2 {
+    padding-bottom: 40px;
+}
 
-	.n0
-	{
-		font-weight: normal !important;
-		text-decoration: none !important;
-	}
+/* Adverts */
+.Zs,
+.aKB {
+    display: none !important;
+}
 
-	.n1 .n0
-	{
-		text-decoration: underline !important;
-	}
+/* Settings */
+.r4,
+.alO {
+    background-color: #fff;
+}
 
-	.mn
-	{
-		display: none;
-	}
+/* Card styling */
+.nH,
+.aeJ,
+.iY .Bu {
+    background-color: #fefefe;
+}
 
-	.oZ-jd
-	{
-		display: none;
-	}
-
-	input.oZ-jc
-	{
-		margin-top: -4px !important;
-		margin-left: 13px !important;
-	}
-
-	.qRauBc
-	{
-		border-top: 0 !important;
-	}
-
-	*:focus
-	{
-		outline: none !important;
-	}
-
-	.yO, .zE { border-bottom: 0 !important; }
-
-	.zA .xY { padding-top: 5px !important; padding-bottom: 3px !important; }
-
-	/* Space between tabs and emails */
-	.aKh { height: 51px }
-
-	@media screen and (max-width: 800px)
-	{
-		.aKh { height: 37px }
-	}
-		
-	.aIf-aLe .aDG,
-	.aAy.J-KU-JW.aAy.aIf-aLe .aKo,
-	.aAy.J-KU-KO.aAy.aIf-aLe .aKo
-	{
-		background-color: #dd4b39;
-	}
-
-	.T-I
-	{
-		border-radius: 0;
-	}
-		
-	.aim
-	{
-		margin-bottom: 5px;
-	}
-
-	/* Compose button */
-
-    /* -- NEW GOOGLE
-	.z0 .T-I
-	{
-		margin-top: 10px;
-		min-width: 120px;
-		min-height: 30px;
-	}
-
-		.aKj.jOWHyd
-		{
-			width: 28px;
-		}
-		
-		.aRw
-		{
-			margin-left: 10px;
-		}
-		
-	.aAy,
-	.aKj.jOWHyd,
-	.TI .T-I-ax7,
-	.z0 .T-I-ax7,
-	.G-atb .T-I-ax7,
-	.J-KU-Jg-K9.aAA .aKi,
-	.UI,
-	.G-atb,
-	.qp
-	{
-		border-color: #e4e4e4 !important;
-	}
-	.gb_Ce::before
-	{
-		background-color: #e4e4e4;
-	}
-		
-	.aAy.J-KU-KO
-	{
-		border-bottom-color: #fff !important;
-	}
-    */
-
-	.UI
-	{
-		min-height: 650px;
-        /* -- NEW GOOGLE
-		border-left: 1px solid;
-		border-right: 1px solid;
-		border-bottom: 1px solid;
-        */
-	}
-
-	.l2
-	{
-		padding-bottom: 40px;
-	}
-
-	/* Adverts */
-	.Zs, .aKB
-	{
-		display: none !important;
-	}
-
-	/* Settings */
-
-	.r4,
-	.alO
-	{
-		background-color: #fff;
-	}
-    
-    /* Card styling */
-    
-    .nH,
-    .aeJ,
-    .iY .Bu
-    {
-        background-color: #fafafa;
-    }
-
-    /* Compose window title */
-
-    .AD .nH
-    {
-        background-color: #D14836 !important;
-    }
+/* Compose window title */
+.AD .nH {
+    background-color: #D14836 !important;
+}
 
 /* Read Email Pane */
 .G3.G2 > div > div {
@@ -297,23 +273,20 @@ body, td, textarea, select, legend, button, option, div.s, font,
 }
 
 /* Email title */
-.if>.byY, .iC .byY
-{
+.if > .byY,
+.iC .byY {
     padding-left: 20px;
 }
 
 /* Reply buttons */
-.amr>.wR.nr
-{
+.amr > .wR.nr {
     background-color: transparent;
 }
-.amn>.ams
-{
+.amn > .ams {
     background-color: white;
 }
-.I5.bzE
-{
-        box-shadow: 0px 1px 3px 0 rgba(0,255,0,0.1);
+.I5.bzE {
+    box-shadow: 0px 1px 3px 0 rgba(0, 255, 0, 0.1);
 }
 /*
 
@@ -322,113 +295,115 @@ body, td, textarea, select, legend, button, option, div.s, font,
     bottom: 35px;
 }
 */
-.I5, .HM .aDj, .aDj .aDi .aDh .IZ .btC
-{
+.I5,
+.HM .aDj,
+.aDj .aDi .aDh .IZ .btC {
     border-radius: 0 !important;
 }
-.HM .aDi::after, .aDj>.aC3, .HM .aDi::before
-{
-    background-color: #fafafa
+.HM .aDi::after,
+.aDj > .aC3,
+.HM .aDi::before {
+    background-color: #fcfcfc
 }
 
 
-    .adn
-    {
-        margin: 0 0 14px 0;
-        background-color: #fff;
-        padding: 0 7px;
-        border: 1px solid #e4e4e4;
-        box-shadow: 0px 1px 3px 0 rgba(0,0,0,0.1);
-    }
-    
-    .UI
-    {
-        background-color: #ffffff;
-        box-shadow: 0px 1px 3px 0 rgba(0,0,0,0.1);
-    }
-    
-    /* Email styles */
-    
-    .hP
-    {
-        font-size: 1.2em;
-    }
-    
-    .aju
-    {
-        padding-top: 7px;
-    }
-    
-    .h9
-    {
-        background-color: rgba(255, 231, 72, .16);
-        margin: 24px 16px 24px -48px;
-        padding: 8px 12px;
-    }
-    
-    .hx .ie .xu .iq
-    {
-        border-top: none;
-    }
-    
-    .hx .iq, .M9
-    {
-        margin-right: 0;
-    }
-    
-    .Bk .G2,
-    .hx .h7 .ac5 .gB,
-    .hx .h7 .acO
-    {
-        border-top: 0;
-    }
-    
-    .nH.aBp
-    {
-        background-color: transparent;
-    }
-
-
-html[dark] ytd-page-manager
-{
-    background-color: #14171A;
+.adn {
+    margin: 0 0 14px 0;
+    background-color: #fff;
+    padding: 0 7px;
+    border: 1px solid #e4e4e4;
+    box-shadow: 0px 1px 3px 0 rgba(0, 0, 0, 0.1);
 }
 
-html[dark] ytd-masthead
-{
-    background-color: #2a2e33;
+.UI {
+    background-color: #ffffff;
+    box-shadow: 0px 1px 3px 0 rgba(0, 0, 0, 0.1);
+}
+
+/* Email styles */
+.hP {
+    font-size: 1.2em;
+}
+
+.aju {
+    padding-top: 7px;
+}
+
+.h9 {
+    background-color: rgba(255, 231, 72, .16);
+    margin: 24px 16px 24px -48px;
+    padding: 8px 12px;
+}
+
+.hx .ie .xu .iq {
+    border-top: none;
+}
+
+.hx .iq,
+.M9 {
+    margin-right: 0;
+}
+
+.Bk .G2,
+.hx .h7 .ac5 .gB,
+.hx .h7 .acO {
+    border-top: 0;
+}
+
+.nH.aBp {
+    background-color: transparent;
+}
+
+/* Youtube Stuff */
+
+html:not(.style-scope)[standardized-themed-scrollbar] {
+    scrollbar-color: #2B2A33 #1C1B22;
+    scrollbar-width: thin;
+}
+
+yt-chip-cloud-renderer,
+html[dark] ytd-page-manager {
+    background-color: #1C1B22;
+}
+
+html[dark] ytd-masthead {
+    background-color: #2B2A33;
+}
+
+
+
+
+.T-I.J-J5-Ji.T-I-Js-Gs.aap.T-I-awG.T-I-ax7.L3 {
+    margin-right: 16px;
 }
 }
 
 @-moz-document domain("calendar.google.com") {
-#mainbody
-	{
-		margin-left: 204px !important;
-	}
+#mainbody {
+    margin-left: 204px !important;
+}
 
-	#topLeftNavigation
-	{
-		left: 204px !important;
-	}
+#topLeftNavigation {
+    left: 204px !important;
+}
 
-	.tg-weekend {
-		background-color: #f1f1f1;
-	}
+.tg-weekend {
+    background-color: #f1f1f1;
+}
 
-	.tg-today {
-		background-color: #ccffdd;
-	}
+.tg-today {
+    background-color: #ccffdd;
+}
 
-	.tg-dualmarker {
-		border-bottom: 1px dashed #d3d3d3;
-		border-top: 1px solid #d3d3d3;
-	}
+.tg-dualmarker {
+    border-bottom: 1px dashed #d3d3d3;
+    border-top: 1px solid #d3d3d3;
+}
 }
 
 @-moz-document domain("plus.google.com") {
-.Up3k2d
-	{
-		font-weight: normal;
-		font-size: 19px;
-	}
+.Up3k2d {
+    font-weight: normal;
+    font-size: 19px;
+}
 }
